# python-cc-templates

./: .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pipeline.yaml  pre-commit-autoupdate.yaml
tests/: test_placeholder.py
vanilla/: cookiecutter.json  pyproject.toml
vanilla-template/: cookiecutter.json
vanilla-template/hooks/: post_gen_project.py
vanilla-template/{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  README.md  pyproject.toml
vanilla-template/{{ cookiecutter.repo_name }}/.github/workflows/: build.yaml
vanilla-template/{{ cookiecutter.repo_name }}/tests/: test_placeholder.py
vanilla/{{ cookiecutter.repo_name }}/: pyproject.toml
