[tool.poetry]
name = "python-cc-templates"
version = "0.1.0"
description = "Repository with cookiecutter templates for python."
authors = ["Dennis Hansen <dhans@dfds.com>"]
readme = "README.md"
packages = [{include = "python_cc_templates"}]

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.4.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
