[tool.poetry]
name = "python-cc-templates"
version = "0.1.0"
description = "Cookiecutter templates for python"
authors = ["Dennis Hansen <nybyhansen1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"