[tool.poetry]
name = "{{ cookiecutter.__package_name_kebab_case }}"
version = "0.1.0"
description = ""{{ cookiecutter.__package_name_kebab_case }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.4.0"

[tool.poetry.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"